--- a/Assets/UI Toolkit/StatusPanel.uxml
+++ b/Assets/UI Toolkit/StatusPanel.uxml
@@ -1,9 +1,113 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd"
->
-    
-</engine:UXML>
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <Style src="project://database/Assets/UI%20Toolkit/MainStyles.uss?fileID=7433441132597879392&amp;guid=5c28875138ec85a48a15204caaad60cc&amp;type=3#MainStyles" />
+    <Style src="project://database/Assets/UI%20Toolkit/FunctionClasses.uss?fileID=7433441132597879392&amp;guid=bbce1e7756d3e934a9fb49cd39e26ab1&amp;type=3#FunctionClasses" />
+    <ui:ScrollView name="StatusPanel" picking-mode="Ignore" style="flex-grow: 1; width: 95%; height: 95%; margin-left: 18px; margin-right: 0; margin-top: 0; margin-bottom: 0; display: flex; visibility: visible; overflow: visible; -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); font-size: 42px;">
+        <ui:TextField picking-mode="Ignore" label="Card" text="3" password="false" name="Card" is-delayed="true" style="width: 25%; left: 10%; -unity-text-align: upper-left;" />
+        <ui:SliderInt label="AP" value="5" high-value="19" show-input-field="true" name="AP" direction="Horizontal" class="SliderPoints AP" />
+        <ui:SliderInt label="CP" value="5" high-value="19" show-input-field="true" name="CP" direction="Horizontal" class="SliderPoints CP" />
+        <ui:SliderInt label="MP" value="5" high-value="19" show-input-field="true" name="MP" direction="Horizontal" class="SliderPoints MP" />
+        <ui:SliderInt label="Enemy Ferocity" value="5" high-value="19" show-input-field="true" name="EnemyFerocity" direction="Horizontal" class="SliderPoints EnemyFerocity" />
+        <ui:SliderInt label="Enemy Morale" value="5" high-value="19" show-input-field="true" name="EnemyMorale" direction="Horizontal" class="SliderPoints Morale" />
+        <ui:Foldout text="Families" name="FamilyFoldout" class="FoldoutHeading">
+            <ui:Foldout text="Family A" name="FamilyA" value="false" class="FoldoutItem FamilyA">
+                <ui:Toggle label="Active" name="IsActive" class="ToggleInFoldout IsActive" />
+                <ui:Toggle label="Man" name="Man" class="Man ToggleInFoldout" />
+                <ui:Toggle label="Woman" name="Woman" class="Woman ToggleInFoldout" style="font-size: 32px;" />
+                <ui:Toggle label="Child" name="Child" class="Child ToggleInFoldout" style="font-size: 32px;" />
+                <ui:Toggle label="Horse" name="Horse" class="Horse ToggleInFoldout" style="font-size: 32px;" />
+                <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="ToggleInFoldout IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
+            </ui:Foldout>
+            <ui:Foldout text="Family B" name="FamilyB" value="false" class="FoldoutItem FamilyB">
+                <ui:Toggle label="Active" name="IsActive" class="ToggleInFoldout IsActive" />
+                <ui:Toggle label="Man" name="Man" class="Man" style="font-size: 32px;" />
+                <ui:Toggle label="Woman" name="Woman" class="Woman" style="font-size: 32px;" />
+                <ui:Toggle label="Child" name="Child" class="Child" style="font-size: 32px;" />
+                <ui:Toggle label="Horse" name="Horse" class="Horse" style="font-size: 32px;" />
+                <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="ToggleInFoldout IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
+            </ui:Foldout>
+            <ui:Foldout text="Family C" name="FamilyC" value="false" class="FoldoutItem FamilyC">
+                <ui:Toggle label="Active" name="IsActive" class="ToggleInFoldout IsActive" />
+                <ui:Toggle label="Man" name="Man" class="Man" style="font-size: 32px;" />
+                <ui:Toggle label="Woman" name="Woman" class="Woman" style="font-size: 32px;" />
+                <ui:Toggle label="Child" name="Child" class="Child" style="font-size: 32px;" />
+                <ui:Toggle label="Horse" name="Horse" class="Horse" style="font-size: 32px;" />
+                <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="ToggleInFoldout IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
+            </ui:Foldout>
+            <ui:Foldout text="Family D" name="FamilyD" value="false" class="FoldoutItem FamilyD">
+                <ui:Toggle label="Active" name="IsActive" class="ToggleInFoldout IsActive" />
+                <ui:Toggle label="Man" name="Man" class="Man" style="font-size: 32px;" />
+                <ui:Toggle label="Woman" name="Woman" class="Woman" style="font-size: 32px;" />
+                <ui:Toggle label="Child" name="Child" class="Child" style="font-size: 32px;" />
+                <ui:Toggle label="Horse" name="Horse" class="Horse" style="font-size: 32px;" />
+                <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="ToggleInFoldout IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
+            </ui:Foldout>
+            <ui:Foldout text="Family E" name="FamilyE" value="false" class="FoldoutItem FamilyE">
+                <ui:Toggle label="Active" name="IsActive" class="ToggleInFoldout IsActive" />
+                <ui:Toggle label="Man" name="Man" class="Man" style="font-size: 32px;" />
+                <ui:Toggle label="Woman" name="Woman" class="Woman" style="font-size: 32px;" />
+                <ui:Toggle label="Child" name="Child" class="Child" style="font-size: 32px;" />
+                <ui:Toggle label="Horse" name="Horse" class="Horse" style="font-size: 32px;" />
+                <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="ToggleInFoldout IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
+            </ui:Foldout>
+            <ui:Foldout text="Family F" name="FamilyF" value="false" class="FoldoutItem FamilyF">
+                <ui:Toggle label="Active" name="IsActive" class="ToggleInFoldout IsActive" />
+                <ui:Toggle label="Man" name="Man" class="Man" style="font-size: 32px;" />
+                <ui:Toggle label="Woman" name="Woman" class="Woman" style="font-size: 32px;" />
+                <ui:Toggle label="Child" name="Child" class="Child" style="font-size: 32px;" />
+                <ui:Toggle label="Horse" name="Horse" class="Horse" style="font-size: 32px;" />
+                <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="ToggleInFoldout IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
+            </ui:Foldout>
+        </ui:Foldout>
+        <ui:Foldout text="Territories" name="TerritoryFoldout" class="FoldoutHeading">
+            <ui:Foldout text="Splitrock" name="Splitrock" value="false" class="Splitrock FoldoutItem" style="left: 10%; width: 50%;">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+            <ui:Foldout text="San Juan" name="SanJuan" value="false" class="SanJuan FoldoutItem">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+            <ui:Foldout text="Zuni" name="Zuni" value="false" class="Zuni FoldoutItem" style="left: 10%; width: 50%;">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+            <ui:Foldout text="Monument" name="Monument" value="false" class="Monument FoldoutItem" style="left: 10%; width: 50%;">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+            <ui:Foldout text="Hopi" name="Hopi" value="false" class="Hopi FoldoutItem" style="left: 10%; width: 50%;">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+            <ui:Foldout text="Black Mesa" name="BlackMesa" value="false" class="BlackMesa FoldoutItem" style="left: 10%; width: 50%;">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+            <ui:Foldout text="Canyon de Chelly" name="Canyon" value="false" class="Canyon FoldoutItem" style="left: 10%; width: 50%;">
+                <ui:Toggle label="Drought" name="Drought" class="HasDrought" style="font-size: 32px;" />
+                <ui:Toggle label="Corn" name="Corn" class="HasCorn" style="font-size: 32px;" />
+                <ui:Toggle label="Mission" name="Mission" class="HasMission" style="font-size: 32px;" />
+                <ui:Toggle label="Rancho" name="Rancho" class="HasRancho" style="font-size: 32px;" />
+                <ui:Toggle label="Fort" name="Fort" class="HasFort" style="font-size: 32px;" />
+            </ui:Foldout>
+        </ui:Foldout>
+    </ui:ScrollView>
+</ui:UXML>
