--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -1,3 +1,28 @@
+.TextDefault {
+    justify-content: flex-start;
+    align-items: stretch;
+    flex-wrap: wrap;
+    width: auto;
+    height: auto;
+    -unity-font: resource('Fonts/EBGaramond-Medium');
+    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
+    -unity-text-align: upper-left;
+    font-size: 72px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    white-space: normal;
+    color: rgb(0, 0, 0);
+    overflow: hidden;
+    flex-shrink: 1;
+    max-height: none;
+}
+
 .Headline {
     -unity-font: resource('Fonts/EBGaramond-Medium');
     -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
@@ -227,38 +252,71 @@
 }
 
 .ButtonWoman {
-    width: 200px;
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Woman');
+    width: 200px;
     height: 200px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    max-width: 20%;
+    max-height: none;
+    -unity-background-scale-mode: scale-and-crop;
 }
 
 .ButtonMan {
-    font-size: 32px;
-    width: 200px;
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Man');
+    width: 200px;
     height: 200px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    max-width: 20%;
+    -unity-background-scale-mode: scale-and-crop;
 }
 
 .ButtonChild {
-    font-size: 32px;
-    width: 200px;
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Child');
+    width: 200px;
     height: 200px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+    max-width: 20%;
+    -unity-background-scale-mode: scale-and-crop;
+}
+
+.ButtonElder {
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Elder');
+    width: 200px;
+    height: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    max-width: 20%;
+    -unity-background-scale-mode: scale-and-crop;
+}
+
+.ButtonElder:hover {
+    border-left-color: rgb(151, 64, 27);
+    border-right-color: rgb(151, 64, 27);
+    border-top-color: rgb(151, 64, 27);
+    border-bottom-color: rgb(151, 64, 27);
+    border-left-width: 12px;
+    border-right-width: 12px;
+    border-top-width: 12px;
+    border-bottom-width: 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .ButtonMan:hover {
@@ -307,39 +365,14 @@
 }
 
 .Toggle {
-    -unity-font: resource('Fonts/Arvo-Regular');
-    -unity-font-definition: resource('Fonts/Arvo-Regular SDF');
+    -unity-font: resource('Fonts/EBGaramond-Medium');
+    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
     font-size: 42px;
-    color: rgb(55, 29, 12);
+    color: rgb(0, 0, 0);
 }
 
 .Toggle:hover {
     background-color: rgb(199, 171, 159);
-}
-
-.TextDefault {
-    justify-content: flex-start;
-    align-items: stretch;
-    flex-wrap: wrap;
-    width: auto;
-    height: auto;
-    -unity-font: resource('Fonts/EBGaramond-Medium');
-    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
-    -unity-text-align: upper-left;
-    font-size: 72px;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    white-space: normal;
-    color: rgb(0, 0, 0);
-    overflow: hidden;
-    flex-shrink: 1;
-    max-height: none;
 }
 
 .SliderPoints {
@@ -386,10 +419,6 @@
     width: 50%;
 }
 
-.ToggleInFoldout {
-    font-size: 32px;
-}
-
 .ToggleMan .unity-toggle__checkmark {
     background-image: resource('Textures/Counters/Counter Man');
     background-color: rgba(255, 255, 255, 0);
@@ -397,11 +426,7 @@
     align-items: flex-start;
     width: 48px;
     height: 48px;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-right: 0;
+    font-size: 32px;
 }
 
 .ToggleWoman .unity-toggle__checkmark {
@@ -411,8 +436,7 @@
     align-items: flex-start;
     width: 48px;
     height: 48px;
-    padding-left: 0;
-    padding-right: 8;
+    font-size: 32px;
 }
 
 .ToggleChild .unity-toggle__checkmark {
@@ -422,15 +446,23 @@
     align-items: flex-start;
     width: 48px;
     height: 48px;
-    padding-left: 0;
-    padding-right: 0;
+    font-size: 32px;
+}
+
+.ToggleHorse .unity-toggle__checkmark {
+    background-image: resource('Textures/Counters/Counter Horse');
+    background-color: rgba(255, 255, 255, 0);
+    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
+    align-items: flex-start;
+    width: 48px;
+    height: 48px;
+    font-size: 32px;
 }
 
 .ToggleMan .unity-toggle__input:checked {
     background-image: resource('Textures/Counters/Counter Man');
     background-color: rgba(255, 255, 255, 0);
     -unity-background-image-tint-color: rgb(255, 255, 255);
-    align-items: auto;
     -unity-background-scale-mode: scale-to-fit;
 }
 
@@ -448,7 +480,15 @@
     -unity-background-scale-mode: scale-to-fit;
 }
 
+.ToggleHorse .unity-toggle__input:checked {
+    background-image: resource('Textures/Counters/Counter Horse');
+    background-color: rgba(255, 255, 255, 0);
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+    -unity-background-scale-mode: scale-to-fit;
+}
+
 .RadioButtonFerocity .unity-base-field__input {
     font-size: 32px;
     flex-direction: row;
+    justify-content: space-around;
 }
