--- a/Assets/UI Toolkit/CardDraw.uxml
+++ b/Assets/UI Toolkit/CardDraw.uxml
@@ -3,11 +3,10 @@
     <ui:VisualElement name="Root" picking-mode="Ignore" style="flex-grow: 1; align-items: center;">
         <ui:Label text="Draw a Card" display-tooltip-when-elided="true" name="Headline" picking-mode="Ignore" class="Headline" style="top: 12%; flex-wrap: wrap;" />
         <ui:TextField name="CardNumInput" max-length="2" is-delayed="false" label="Enter Card Number" style="top: 22%; width: 554px; -unity-text-align: upper-left; -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); color: rgb(151, 64, 27); font-size: 67px; height: 196px; background-color: rgba(255, 255, 255, 0); flex-direction: column; align-items: stretch; justify-content: center;" />
-        <ui:Button text="Back" display-tooltip-when-elided="true" name="Back" class="BackNext ButtonQuit" style="right: auto; left: 1%;" />
-        <ui:Button text="Quit" display-tooltip-when-elided="true" name="Quit" class="BackNext ButtonQuit" />
+        <ui:Button text="Back" display-tooltip-when-elided="true" name="Back" class="BackNext ButtonQuit ButtonMenu" style="right: auto; left: 1%;" />
+        <ui:Button text="Quit" display-tooltip-when-elided="true" name="Quit" class="BackNext ButtonQuit ButtonMenu" />
         <ui:Button text="Try &#10;Again" display-tooltip-when-elided="true" name="ReDraw" class="BackNext" style="left: 10%; bottom: 20%; width: 30%; right: auto; visibility: hidden;" />
-        <ui:Button text="Confirm" display-tooltip-when-elided="true" name="Confirm" tooltip="Start Card Action" class="BackNext" style="left: auto; bottom: 20%; width: 30%; right: 10%; visibility: visible;" />
-        <ui:Button text="Reopen&#10;Keypad" display-tooltip-when-elided="true" name="Reopen" tooltip="Start Card Action" class="BackNext" style="left: auto; bottom: 20%; width: 30%; right: auto; visibility: hidden;" />
-        <NavajoWars.ChoiceButton focusable="true" button-type="Three" name="TestButton" style="top: 50%; width: 25%;" />
+        <ui:Button text="Confirm" display-tooltip-when-elided="true" name="Confirm" tooltip="Start Card Action" class="BackNext ButtonMenu" style="left: auto; bottom: 20%; width: 30%; right: 10%; visibility: visible;" />
+        <ui:Button text="Reopen&#10;Keypad" display-tooltip-when-elided="true" name="Reopen" tooltip="Start Card Action" class="BackNext ButtonMenu" style="left: auto; bottom: 20%; width: 30%; right: auto; visibility: hidden;" />
     </ui:VisualElement>
 </ui:UXML>
