--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -64,101 +64,31 @@
 .ButtonMenu:hover {
     width: 750px;
     height: 110px;
-    -unity-font: resource('Fonts/EBGaramond-Medium');
-    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
-    background-color: rgba(55, 29, 12, 0.78);
-    color: rgb(179, 51, 40);
-    font-size: 64px;
-    border-left-color: rgb(151, 64, 27);
-    border-right-color: rgb(151, 64, 27);
-    border-top-color: rgb(151, 64, 27);
-    border-bottom-color: rgb(151, 64, 27);
     border-left-width: 8px;
     border-right-width: 8px;
     border-top-width: 8px;
     border-bottom-width: 8px;
-    border-top-left-radius: 24px;
-    border-bottom-left-radius: 24px;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-top: 24px;
-    margin-bottom: 24px;
 }
 
 .ButtonMenu:active {
     width: 750px;
     height: 110px;
-    -unity-font: resource('Fonts/EBGaramond-Medium');
-    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
     background-color: rgb(151, 64, 27);
     color: rgb(55, 29, 12);
-    font-size: 64px;
-    border-left-color: rgb(179, 51, 40);
-    border-right-color: rgb(179, 51, 40);
-    border-top-color: rgb(179, 51, 40);
-    border-bottom-color: rgb(179, 51, 40);
-    border-left-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
-    border-bottom-width: 0;
-    border-top-left-radius: 24px;
-    border-bottom-left-radius: 24px;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-top: 24px;
-    margin-bottom: 24px;
 }
 
 .BackNext {
-    width: 20%;
-    height: 10%;
     position: absolute;
     left: 5%;
     bottom: 5%;
-    -unity-font: resource('Fonts/EBGaramond-Medium');
-    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
-    background-color: rgba(55, 29, 12, 0.78);
-    color: rgb(179, 51, 40);
-    font-size: 64px;
-    border-left-color: rgb(179, 51, 40);
-    border-right-color: rgb(179, 51, 40);
-    border-top-color: rgb(179, 51, 40);
-    border-bottom-color: rgb(179, 51, 40);
-    border-left-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
-    border-bottom-width: 0;
-    border-top-left-radius: 24px;
-    border-bottom-left-radius: 24px;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
+    width: 20%;
+    height: 10%;
 }
 
 .BackNext:hover {
     position: absolute;
     left: 5%;
     bottom: 5%;
-    -unity-font: resource('Fonts/EBGaramond-Medium');
-    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
-    background-color: rgba(55, 29, 12, 0.78);
-    color: rgb(179, 51, 40);
-    font-size: 64px;
-    border-left-color: rgb(179, 51, 40);
-    border-right-color: rgb(179, 51, 40);
-    border-top-color: rgb(179, 51, 40);
-    border-bottom-color: rgb(179, 51, 40);
-    border-left-width: 8px;
-    border-right-width: 8px;
-    border-top-width: 8px;
-    border-bottom-width: 8px;
-    border-top-left-radius: 24px;
-    border-bottom-left-radius: 24px;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
     width: 20%;
     height: 10%;
 }
@@ -167,28 +97,12 @@
     position: absolute;
     left: 5%;
     bottom: 5%;
-    -unity-font: resource('Fonts/EBGaramond-Medium');
-    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
-    background-color: rgb(151, 64, 27);
-    color: rgb(55, 29, 12);
-    font-size: 64px;
-    border-left-color: rgb(179, 51, 40);
-    border-right-color: rgb(179, 51, 40);
-    border-top-color: rgb(179, 51, 40);
-    border-bottom-color: rgb(179, 51, 40);
-    border-left-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
-    border-bottom-width: 0;
-    border-top-left-radius: 24px;
-    border-bottom-left-radius: 24px;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
     width: 20%;
     height: 10%;
 }
 
-.ButtonQuit {
+.Quit {
+    position: absolute;
     left: auto;
     right: 1%;
     bottom: auto;
@@ -207,7 +121,8 @@
     background-color: rgb(71, 36, 16);
 }
 
-.ButtonQuit:hover {
+.Quit:hover {
+    position: absolute;
     left: auto;
     right: 1%;
     bottom: auto;
@@ -217,12 +132,7 @@
     font-size: 36px;
     -unity-font: resource('Fonts/Arvo-Regular');
     -unity-font-definition: resource('Fonts/Arvo-Regular SDF');
-    position: absolute;
     -unity-text-align: middle-center;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
     border-left-color: rgb(151, 64, 27);
     border-right-color: rgb(151, 64, 27);
     border-top-color: rgb(151, 64, 27);
@@ -251,9 +161,7 @@
     align-items: center;
 }
 
-.ButtonWoman {
-    background-color: rgba(255, 255, 255, 0.31);
-    background-image: resource('Textures/Counters/Counter Woman');
+Button.Person {
     width: 200px;
     height: 200px;
     margin-left: 10px;
@@ -265,103 +173,40 @@
     -unity-background-scale-mode: scale-and-crop;
 }
 
-.ButtonMan {
+Button.Person:hover
+{
+    border-left-color: rgb(151, 64, 27);
+    border-right-color: rgb(151, 64, 27);
+    border-top-color: rgb(151, 64, 27);
+    border-bottom-color: rgb(151, 64, 27);
+    border-left-width: 12px;
+    border-right-width: 12px;
+    border-top-width: 12px;
+    border-bottom-width: 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.Man {
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Man');
-    width: 200px;
-    height: 200px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    max-width: 20%;
-    -unity-background-scale-mode: scale-and-crop;
 }
 
-.ButtonChild {
+.Woman{
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Woman');
+}
+
+.Child {
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Child');
-    width: 200px;
-    height: 200px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    max-width: 20%;
-    -unity-background-scale-mode: scale-and-crop;
 }
 
-.ButtonElder {
+.Elder {
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Elder');
-    width: 200px;
-    height: 200px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    max-width: 20%;
-    -unity-background-scale-mode: scale-and-crop;
-}
-
-.ButtonElder:hover {
-    border-left-color: rgb(151, 64, 27);
-    border-right-color: rgb(151, 64, 27);
-    border-top-color: rgb(151, 64, 27);
-    border-bottom-color: rgb(151, 64, 27);
-    border-left-width: 12px;
-    border-right-width: 12px;
-    border-top-width: 12px;
-    border-bottom-width: 12px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.ButtonMan:hover {
-    border-left-color: rgb(151, 64, 27);
-    border-right-color: rgb(151, 64, 27);
-    border-top-color: rgb(151, 64, 27);
-    border-bottom-color: rgb(151, 64, 27);
-    border-left-width: 12px;
-    border-right-width: 12px;
-    border-top-width: 12px;
-    border-bottom-width: 12px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.ButtonWoman:hover {
-    border-left-color: rgb(151, 64, 27);
-    border-right-color: rgb(151, 64, 27);
-    border-top-color: rgb(151, 64, 27);
-    border-bottom-color: rgb(151, 64, 27);
-    border-left-width: 12px;
-    border-right-width: 12px;
-    border-top-width: 12px;
-    border-bottom-width: 12px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.ButtonChild:hover {
-    border-left-color: rgb(151, 64, 27);
-    border-right-color: rgb(151, 64, 27);
-    border-top-color: rgb(151, 64, 27);
-    border-bottom-color: rgb(151, 64, 27);
-    border-left-width: 12px;
-    border-right-width: 12px;
-    border-top-width: 12px;
-    border-bottom-width: 12px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
 }
 
 .Toggle {
@@ -419,75 +264,39 @@
     width: 50%;
 }
 
-.ToggleMan .unity-toggle__checkmark {
+Toggle.Person .unity-toggle__checkmark {
+    background-color: rgba(255, 255, 255, 0);
+    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
+    align-items: flex-start;
+    width: 48px;
+    height: 48px;
+    font-size: 32px;
+    -unity-background-scale-mode: scale-to-fit;
+}
+
+Toggle.Person .unity-toggle__input:checked
+{
+    -unity-background-image-tint-color: rgb(255, 255, 255);
+}
+
+Toggle.Man .unity-toggle__checkmark
+{
     background-image: resource('Textures/Counters/Counter Man');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
-    align-items: flex-start;
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
 }
 
-.ToggleWoman .unity-toggle__checkmark {
+Toggle.Woman .unity-toggle__checkmark {
     background-image: resource('Textures/Counters/Counter Woman');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
-    align-items: flex-start;
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
 }
 
-.ToggleChild .unity-toggle__checkmark {
+Toggle.Child .unity-toggle__checkmark {
     background-image: resource('Textures/Counters/Counter Child');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
-    align-items: flex-start;
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
 }
 
-.ToggleHorse .unity-toggle__checkmark {
+Toggle.Horse .unity-toggle__checkmark {
     background-image: resource('Textures/Counters/Counter Horse');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
-    align-items: flex-start;
-    width: 48px;
-    height: 48px;
-    font-size: 32px;
 }
 
-.ToggleMan .unity-toggle__input:checked {
-    background-image: resource('Textures/Counters/Counter Man');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgb(255, 255, 255);
-    -unity-background-scale-mode: scale-to-fit;
-}
-
-.ToggleWoman .unity-toggle__input:checked {
-    background-image: resource('Textures/Counters/Counter Woman');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgb(255, 255, 255);
-    -unity-background-scale-mode: scale-to-fit;
-}
-
-.ToggleChild .unity-toggle__input:checked {
-    background-image: resource('Textures/Counters/Counter Child');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgb(255, 255, 255);
-    -unity-background-scale-mode: scale-to-fit;
-}
-
-.ToggleHorse .unity-toggle__input:checked {
-    background-image: resource('Textures/Counters/Counter Horse');
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgb(255, 255, 255);
-    -unity-background-scale-mode: scale-to-fit;
-}
-
-.RadioButtonFerocity .unity-base-field__input {
+RadioButton.Ferocity .unity-base-field__input {
     font-size: 32px;
     flex-direction: row;
     justify-content: space-around;
