--- a/Assets/UI Toolkit/StatusPanel.uxml
+++ b/Assets/UI Toolkit/StatusPanel.uxml
@@ -11,68 +11,68 @@
         <ui:Foldout text="Families" name="FamilyFoldout" class="FoldoutHeading">
             <ui:Foldout text="Family A" name="FamilyA" value="false" class="FoldoutItem FamilyA">
                 <ui:VisualElement name="Members" style="flex-direction: row; justify-content: space-around;">
-                    <ui:Toggle name="Man" class="Man ToggleMan" />
-                    <ui:Toggle name="Woman" class="Woman ToggleWoman" />
-                    <ui:Toggle name="Child" class="Child ToggleChild" />
-                    <ui:Toggle name="Horse" class="Horse ToggleHorse" />
+                    <ui:Toggle name="Man" class="Toggle Person Man" />
+                    <ui:Toggle name="Woman" class="Toggle Person Woman" />
+                    <ui:Toggle name="Child" class="Toggle Person Child" />
+                    <ui:Toggle name="Horse" class="Toggle Person Horse" />
                 </ui:VisualElement>
                 <ui:Toggle label="Active" name="IsActive" class="Toggle IsActive" />
-                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="RadioButtonFerocity Toggle Ferocity" />
+                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="Toggle Ferocity" />
                 <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="Toggle IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
             </ui:Foldout>
             <ui:Foldout text="Family B" name="FamilyB" value="false" class="FoldoutItem FamilyB">
                 <ui:VisualElement name="Members" style="flex-direction: row; justify-content: space-around;">
-                    <ui:Toggle name="Man" class="Man ToggleMan" />
-                    <ui:Toggle name="Woman" class="Woman ToggleWoman" />
-                    <ui:Toggle name="Child" class="Child ToggleChild" />
-                    <ui:Toggle name="Horse" class="Horse ToggleHorse" />
+                    <ui:Toggle name="Man" class="Toggle Person Man" />
+                    <ui:Toggle name="Woman" class="Toggle Person Woman" />
+                    <ui:Toggle name="Child" class="Toggle Person Child" />
+                    <ui:Toggle name="Horse" class="Toggle Person Horse" />
                 </ui:VisualElement>
                 <ui:Toggle label="Active" name="IsActive" class="Toggle IsActive" />
-                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="RadioButtonFerocity Toggle Ferocity" />
+                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="Toggle Ferocity" />
                 <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="Toggle IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
             </ui:Foldout>
             <ui:Foldout text="Family C" name="FamilyC" value="false" class="FoldoutItem FamilyC">
                 <ui:VisualElement name="Members" style="flex-direction: row; justify-content: space-around;">
-                    <ui:Toggle name="Man" class="Man ToggleMan" />
-                    <ui:Toggle name="Woman" class="Woman ToggleWoman" />
-                    <ui:Toggle name="Child" class="Child ToggleChild" />
-                    <ui:Toggle name="Horse" class="Horse ToggleHorse" />
+                    <ui:Toggle name="Man" class="Toggle Person Man" />
+                    <ui:Toggle name="Woman" class="Toggle Person Woman" />
+                    <ui:Toggle name="Child" class="Toggle Person Child" />
+                    <ui:Toggle name="Horse" class="Toggle Person Horse" />
                 </ui:VisualElement>
                 <ui:Toggle label="Active" name="IsActive" class="Toggle IsActive" />
-                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="RadioButtonFerocity Toggle Ferocity" />
+                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="Toggle Ferocity" />
                 <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="Toggle IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
             </ui:Foldout>
             <ui:Foldout text="Family D" name="FamilyD" value="false" class="FoldoutItem FamilyD">
                 <ui:VisualElement name="Members" style="flex-direction: row; justify-content: space-around;">
-                    <ui:Toggle name="Man" class="Man ToggleMan" />
-                    <ui:Toggle name="Woman" class="Woman ToggleWoman" />
-                    <ui:Toggle name="Child" class="Child ToggleChild" />
-                    <ui:Toggle name="Horse" class="Horse ToggleHorse" />
+                    <ui:Toggle name="Man" class="Toggle Person Man" />
+                    <ui:Toggle name="Woman" class="Toggle Person Woman" />
+                    <ui:Toggle name="Child" class="Toggle Person Child" />
+                    <ui:Toggle name="Horse" class="Toggle Person Horse" />
                 </ui:VisualElement>
                 <ui:Toggle label="Active" name="IsActive" class="Toggle IsActive" />
-                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="RadioButtonFerocity Toggle Ferocity" />
+                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="Toggle Ferocity" />
                 <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="Toggle IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
             </ui:Foldout>
             <ui:Foldout text="Family E" name="FamilyE" value="false" class="FoldoutItem FamilyE">
                 <ui:VisualElement name="Members" style="flex-direction: row; justify-content: space-around;">
-                    <ui:Toggle name="Man" class="Man ToggleMan" />
-                    <ui:Toggle name="Woman" class="Woman ToggleWoman" />
-                    <ui:Toggle name="Child" class="Child ToggleChild" />
-                    <ui:Toggle name="Horse" class="Horse ToggleHorse" />
+                    <ui:Toggle name="Man" class="Toggle Person Man" />
+                    <ui:Toggle name="Woman" class="Toggle Person Woman" />
+                    <ui:Toggle name="Child" class="Toggle Person Child" />
+                    <ui:Toggle name="Horse" class="Toggle Person Horse" />
                 </ui:VisualElement>
                 <ui:Toggle label="Active" name="IsActive" class="Toggle IsActive" />
-                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="RadioButtonFerocity Toggle Ferocity" />
+                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="Toggle Ferocity" />
                 <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="Toggle IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
             </ui:Foldout>
             <ui:Foldout text="Family F" name="FamilyF" value="false" class="FoldoutItem FamilyF">
                 <ui:VisualElement name="Members" style="flex-direction: row; justify-content: space-around;">
-                    <ui:Toggle name="Man" class="Man ToggleMan" />
-                    <ui:Toggle name="Woman" class="Woman ToggleWoman" />
-                    <ui:Toggle name="Child" class="Child ToggleChild" />
-                    <ui:Toggle name="Horse" class="Horse ToggleHorse" />
+                    <ui:Toggle name="Man" class="Toggle Person Man" />
+                    <ui:Toggle name="Woman" class="Toggle Person Woman" />
+                    <ui:Toggle name="Child" class="Toggle Person Child" />
+                    <ui:Toggle name="Horse" class="Toggle Person Horse" />
                 </ui:VisualElement>
                 <ui:Toggle label="Active" name="IsActive" class="Toggle IsActive" />
-                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="RadioButtonFerocity Toggle Ferocity" />
+                <ui:RadioButtonGroup label="Ferocity" value="-1" name="Ferocity" choices="0, 1, 2,3" class="Toggle Ferocity" />
                 <ui:DropdownField label="Location" index="-1" name="IsWhere" choices="Splitrock, San Juan, Zuni, Monument, Hopi, Black Mesa, Canyon de Chelly" class="Toggle IsWhere" style="max-height: 60px; -unity-text-align: middle-left;" />
             </ui:Foldout>
         </ui:Foldout>
@@ -132,10 +132,10 @@
             <ui:VisualElement name="PassageDisplay" class="PassageDisplay" style="flex-direction: row; flex-wrap: wrap; align-items: flex-start;" />
             <ui:Label text="Add To Passage" display-tooltip-when-elided="true" name="LabelAddToPassage" />
             <ui:VisualElement name="PassageButtons" style="flex-direction: row; justify-content: space-between; width: 80%;">
-                <ui:Button display-tooltip-when-elided="true" name="AddMan" class="AddPersonToPassage ButtonMan" />
-                <ui:Button display-tooltip-when-elided="true" name="AddWoman" class="AddPersonToPassage ButtonWoman" />
-                <ui:Button display-tooltip-when-elided="true" name="AddChild" class="AddPersonToPassage ButtonChild" />
-                <ui:Button display-tooltip-when-elided="true" name="AddElder" class="AddPersonToPassage ButtonElder" />
+                <ui:Button display-tooltip-when-elided="true" name="AddMan" class="AddPersonToPassage Person Man" />
+                <ui:Button display-tooltip-when-elided="true" name="AddWoman" class="AddPersonToPassage Person Woman" />
+                <ui:Button display-tooltip-when-elided="true" name="AddChild" class="AddPersonToPassage Person Child" />
+                <ui:Button display-tooltip-when-elided="true" name="AddElder" class="AddPersonToPassage Person Elder" />
             </ui:VisualElement>
         </ui:VisualElement>
     </ui:ScrollView>
