--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -156,25 +156,30 @@
 .FoldoutChild {
     -unity-font: resource('Fonts/Arvo-Regular');
     -unity-font-definition: resource('Fonts/Arvo-Regular SDF');
-    font-size: 76px;
+    font-size: 52px;
     flex-wrap: wrap;
     align-items: center;
 }
 
-Button.Person {
+Button.Person,
+Button.Man,
+Button.Woman,
+Button.Child,
+Button.Elder {
     width: 200px;
     height: 200px;
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    max-width: 20%;
-    max-height: none;
     -unity-background-scale-mode: scale-and-crop;
 }
 
-Button.Person:hover
-{
+Button.Person:hover,
+Button.Man:hover,
+Button.Woman:hover,
+Button.Child:hover,
+Button.Elder:hover {
     border-left-color: rgb(151, 64, 27);
     border-right-color: rgb(151, 64, 27);
     border-top-color: rgb(151, 64, 27);
@@ -189,12 +194,19 @@ Button.Person:hover
     border-bottom-right-radius: 4px;
 }
 
+#Displays .Man,
+#Displays .Woman,
+#Displays .Child,
+#Displays .Elder {
+    max-width: 20%;
+}
+
 .Man {
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Man');
 }
 
-.Woman{
+.Woman {
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Woman');
 }
@@ -207,6 +219,75 @@ Button.Person:hover
 .Elder {
     background-color: rgba(255, 255, 255, 0.31);
     background-image: resource('Textures/Counters/Counter Elder');
+}
+
+Button.Resource,
+Button.Horse,
+Button.Sheep,
+Button.Corn,
+Button.TradeGood,
+Button.Firearm {
+    width: 200px;
+    height: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -unity-background-scale-mode: scale-and-crop;
+}
+
+Button.Resource:hover,
+Button.Horse:hover,
+Button.Sheep:hover,
+Button.Corn:hover,
+Button.TradeGood:hover,
+Button.Firearm:hover {
+    border-left-color: rgb(151, 64, 27);
+    border-right-color: rgb(151, 64, 27);
+    border-top-color: rgb(151, 64, 27);
+    border-bottom-color: rgb(151, 64, 27);
+    border-left-width: 12px;
+    border-right-width: 12px;
+    border-top-width: 12px;
+    border-bottom-width: 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+#Displays .Horse,
+#Displays .Sheep,
+#Displays .Corn,
+#Displays .TradeGood,
+#Displays .Firearm
+{
+    max-width: 20%;
+}
+
+.Horse {
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Horse');
+}
+
+.Sheep {
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Sheep');
+}
+
+.Corn {
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Corn');
+}
+
+.TradeGood {
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter TradeGood');
+}
+
+.Firearm {
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Firearm');
 }
 
 .Toggle {
@@ -265,8 +346,6 @@ Button.Person:hover
 }
 
 Toggle.Person .unity-toggle__checkmark {
-    background-color: rgba(255, 255, 255, 0);
-    -unity-background-image-tint-color: rgba(255, 255, 255, 0.52);
     align-items: flex-start;
     width: 48px;
     height: 48px;
@@ -274,13 +353,11 @@ Toggle.Person .unity-toggle__checkmark {
     -unity-background-scale-mode: scale-to-fit;
 }
 
-Toggle.Person .unity-toggle__input:checked
-{
-    -unity-background-image-tint-color: rgb(255, 255, 255);
+Toggle.Person .unity-toggle__input:checked {
+    -unity-background-image-tint-color: #f2fab6;
 }
 
-Toggle.Man .unity-toggle__checkmark
-{
+Toggle.Man .unity-toggle__checkmark {
     background-image: resource('Textures/Counters/Counter Man');
 }
 
